app/assets/stylesheets/application.scss
@import "materialize";

body {
  display: flex;
  min-height: 100vh;
  -webkit-flex-direction: column;
  flex-direction: column;
}
header {
  padding-top: 3em;
}
main {
  flex: 1;
  -webkit-flex: 1;
}
.parallax-container {
  height: 450px;
}
.c-url {
  margin-bottom: 3rem;
  padding: 0.5em 1em;
}

#items_list {
  td {
    word-break: break-all;
  }
  button {
    word-break: normal;
  }
}

.is-hidden {
  display: none;
}

@media (max-width: 640px) {
  header {
    padding-top: 0;
  }
  h1 {
    font-size: 2em;
    line-height: 1.5em;
    padding-left: 0.5em;
    padding-right: 0.5em;
  }
  .container {
    padding-left: 0;
    padding-right: 0;
    width: auto;
  }
}

